--- a/example/in.mustache
+++ b/example/in.mustache
@@ -29,7 +29,7 @@
     <h3>[header]</h3>
     <ul>
         [#comments]
-        <li class=\"comment\">
+        <li class="comment">
             <h5>[name]</h5>
             <p>[body]</p>
         </li>
