--- a/example/in.mustache
+++ b/example/in.mustache
@@ -25,7 +25,7 @@
 
 [a.b.c] == [#a][#b][c][/b][/a]
 
-<div class=\"comments\">
+<div class="comments">
     <h3>[header]</h3>
     <ul>
         [#comments]
