--- a/example/in.mustache
+++ b/example/in.mustache
@@ -1,39 +1,11 @@
-<h1>{{header}}</h1>
-{{#bug}}
-{{/bug}}
+{{!show as list}}
+{{*.}}
+* {{key}}: {{value}}
+{{/.}}
 
-{{# items}}
-  {{#first}}
-    <li><strong>{{name}}</strong></li>
-  {{/first}}
-  {{#link}}
-    <li><a {{>href}}>{{name}}</a></li>
-  {{/link}}
-{{ /items}}
+answer.everything = {{answer.everything}}
+list = {{#list}}({{.}}){{/list}}
 
-{{#empty}}
-  <p>The list is empty.</p>
-{{/ empty }}
-
-{{=[ ]=}}
-
-[#array]([.])[/array]
-
-[#items]
-[count]->[count]->[count]
-[/items]
-
-[a.b.c] == [#a][#b][c][/b][/a]
-
-<div class="comments">
-    <h3>[header]</h3>
-    <ul>
-        [#comments]
-        <li class="comment">
-            <h5>[name]</h5>
-            <p>[body]</p>
-        </li>
-        <!--[count]-->
-        [/comments]
-    </ul>
-</div>
+{{#object}}
+{{value}} {{currency}}
+{{/object}}
